ios_versioned_docs/version-0.1/reference/self-participant.mdx
---
sidebar_position: 5
---

# DyteSelfParticipant

Being a subclass of [`DyteParticipant`](./participant), all the properties and methods of `DyteParticipant` are available to `DyteSelfParticipant`. Other than that, it exposes a few special methods.

## Methods

| Method name       | Params (with data type) | Use                                                                           |
| ----------------- | ----------------------- | ----------------------------------------------------------------------------- |
| toggleAudio       |                         | Enable and disable audio stream sharing from the participant to the meeting   |
| toggleVideo       |                         | Enable and disable video stream sharing from the participant to the meeting   |
| selfScreensharing |                         | Enable and disable screensharing from the participant to the meeting          |
| selfPin           |                         | Pin the current participant video to the grid for everyone in the meeting     |
| selfUnpin         |                         | Unpin the current participant video from the grid for everyone in the meeting |
