ios_versioned_docs/version-1.2.8/reference/self-participant.mdx
---
sidebar_position: 5
---

# DyteSelfParticipant

Being a subclass of [`DyteParticipant`](./participant), all the properties and methods of `DyteParticipant` are available to `DyteSelfParticipant`. Other than that, it exposes a few special methods.

## Methods

| Method name          | Params (with data type) | Use                                                                                                      |
| -------------------- | ----------------------- | -------------------------------------------------------------------------------------------------------- |
| enableAudio          |                         | Enable audio stream sharing from the participant to the meeting                                          |
| disableAudio         |                         | Disable audio stream from another participant, effectively muting them for everyone in the meeting       |
| enableVideo          |                         | Enable video stream sharing from the participant to the meeting                                          |
| disableVideo         |                         | Disable video stream from another participant, effectively blanking them out for everyone in the meeting |
| enableScreensharing  |                         | Enable screensharing from the participant to the meeting                                                 |
| disableScreensharing |                         | Disable screensharing from the participant to the meeting                                                |
| selfPin              |                         | Pin the current participant video to the grid for everyone in the meeting                                |
| selfUnpin            |                         | Unpin the current participant video from the grid for everyone in the meeting                            |
| leaveRoom            |                         | Makes the current participant leave the meeting                                                          |
